--- a/src/patternfly/components/TreeView/tree-view.scss
+++ b/src/patternfly/components/TreeView/tree-view.scss
@@ -357,11 +357,17 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
 
 .#{$tree-view}__list-item {
   .#{$tree-view}__list {
+    display: none;
     opacity: var(--#{$tree-view}__list--Opacity);
     transition-timing-function: var(--#{$tree-view}__list--TransitionTimingFunction);
     transition-duration: var(--#{$tree-view}__list--TransitionDuration--fade), var(--#{$tree-view}__list--TransitionDuration--slide);
-    transition-property: opacity, translate;
+    transition-property: opacity, translate, display;
+    transition-behavior: allow-discrete;
     translate: 0 var(--#{$tree-view}__list--TranslateY);
+
+    &:where([hidden]) {
+      display: flex;
+    }
   }
 
   .#{$tree-view}__list-item {
@@ -374,9 +380,15 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
     --#{$tree-view}__node-toggle-icon--Rotate: var(--#{$tree-view}__list-item--m-expanded__node-toggle-icon--Rotate);
 
     > .#{$tree-view}__list {
+      display: revert;
       opacity: var(--#{$tree-view}--m-expanded__list--Opacity);
-      transition-duration: var(--#{$tree-view}__list--TransitionDuration--expand--fade), var(--#{$tree-view}__list--TransitionDuration--expand--slide);
+      transition-duration: var(--#{$tree-view}__list--TransitionDuration--expand--fade), var(--#{$tree-view}__list--TransitionDuration--expand--slide), var(--#{$tree-view}__list--TransitionDuration--expand--fade);
       translate: 0 var(--#{$tree-view}--m-expanded__list--TranslateY);
+
+      @starting-style {
+        --#{$tree-view}--m-expanded__list--Opacity: 0;
+        --#{$tree-view}--m-expanded__list--TranslateY: -.5rem;
+      }
     }
   }
 }
