chore(search-input): update docs, change close classname

--- a/src/patternfly/components/InputGroup/input-group-item.hbs
+++ b/src/patternfly/components/InputGroup/input-group-item.hbs
@@ -4,8 +4,8 @@
     input-group-item--IsPlain='pf-m-plain'
     input-group-item--IsFill='pf-m-fill'
     input-group-item--IsDisabled='pf-m-disabled'
-    input-group-item--IsSearchTextInput='pf-m-search-input'
-    input-group-item--IsSearchClose='pf-m-search-close'
+    input-group-item--IsSearchInput='pf-m-search-input'
+    input-group-item--IsSearchAction='pf-m-search-action'
     input-group-item--IsSearchExpand='pf-m-search-expand'
     input-group-item--modifier=input-group-item--modifier
   }}"
