--- a/src/patternfly/components/ExpandableSection/expandable-section.scss
+++ b/src/patternfly/components/ExpandableSection/expandable-section.scss
@@ -23,6 +23,8 @@
   --#{$expandable-section}__content--TransitionDelay--hide: var(--#{$expandable-section}__content--TransitionDuration--fade);
   --#{$expandable-section}__content--Opacity: 0;
   --#{$expandable-section}__content--TranslateY: 0;
+  --#{$expandable-section}--m-expand-top__content--TranslateY: 0;
+  --#{$expandable-section}--m-expand-bottom__content--TranslateY: 0;
   --#{$expandable-section}--m-expanded__content--Opacity: 1;
   --#{$expandable-section}--m-expanded__content--TranslateY: 0;
 
@@ -30,6 +32,8 @@
     --#{$expandable-section}__content--TransitionDuration--collapse--slide: var(--pf-t--global--motion--duration--fade--short);
     --#{$expandable-section}__content--TransitionDuration--expand--slide: var(--pf-t--global--motion--duration--fade--default);
     --#{$expandable-section}__content--TranslateY: -.5rem;
+    --#{$expandable-section}--m-expand-top__content--TranslateY: .5rem;
+    --#{$expandable-section}--m-expand-bottom__content--TranslateY: -.5rem;
   }
 
   // Content
@@ -81,6 +85,29 @@
     gap: var(--pf-v6-c-expandable-section--Gap);
   }
 
+  &.pf-m-expand-top {
+    --#{$expandable-section}__toggle-icon--Rotate: var(--#{$expandable-section}__toggle-icon--m-expand-top--Rotate);
+  }
+
+  // The following selector is for ensuring we target only detached expandable section contents without introducing a breaking change
+  // (since typically both toggle and content would both be in the expandable section wrapper)
+  // In a breaking change we could update this to utilize the pf-m-detached class
+  &:has(.#{$expandable-section}__content:only-child) {
+    &:not(.pf-m-expand-top, .pf-m-expand-bottom) {
+      --#{$expandable-section}__content--TranslateY: 0;
+      --#{$expandable-section}__content--TransitionDuration--expand--fade: 0s;
+      --#{$expandable-section}__content--TransitionDuration--collapse--fade: 0s;
+    }
+
+    &.pf-m-expand-top:not(.pf-m-expanded) {
+      --#{$expandable-section}__content--TranslateY: var(--#{$expandable-section}--m-expand-top__content--TranslateY);
+    }
+
+    &.pf-m-expand-bottom:not(.pf-m-expanded) {
+      --#{$expandable-section}__content--TranslateY: var(--#{$expandable-section}--m-expand-bottom__content--TranslateY);
+    }
+  }
+
   &.pf-m-limit-width {
     --#{$expandable-section}__content--MaxWidth: var(--#{$expandable-section}--m-limit-width__content--MaxWidth);
   }
@@ -122,7 +149,7 @@
   transition: var(--#{$expandable-section}__toggle-icon--Transition); // TODO remove shorthand in breaking change
   transform: rotate(var(--#{$expandable-section}__toggle-icon--Rotate));
 
-  &.pf-m-expand-top {
+  &.pf-m-expand-top { // TODO: Remove this block in breaking change in favor of using modifier on outer expandable section wrapper
     --#{$expandable-section}__toggle-icon--Rotate: var(--#{$expandable-section}__toggle-icon--m-expand-top--Rotate);
   }
 }
