--- a/src/patternfly/components/Wizard/wizard-nav-link-status-icon.hbs
+++ b/src/patternfly/components/Wizard/wizard-nav-link-status-icon.hbs
@@ -2,5 +2,5 @@
   {{#if wizard-nav-link-status-icon--attribute}}
     {{{wizard-nav-link-status-icon--attribute}}}
   {{/if}}>
-  <i class="fas fa-{{ternary wizard-nav-item--IsSuccess 'check-circle' 'exclamation-circle'}}" aria-hidden="true"></i>
+  <i class="fas fa-{{ternary wizard-nav-item--IsSuccess 'check-circle' (ternary wizard-nav-item--IsWarning 'exclamation-triangle' 'exclamation-circle')}}" aria-hidden="true"></i>
 </span>
